# achievements-tracker-plugin

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/setup-windows-codesigning/: action.yaml
.github/scripts/: Build-Windows.ps1  Package-Windows.ps1  build-macos  build-ubuntu  package-macos  package-ubuntu
.github/scripts/utils.zsh/: check_macos  setup_ubuntu
.github/workflows/: build-project.yaml  check-obs-update.yaml  coverage.yaml  dispatch.yaml  pr-pull.yaml  push.yaml
build-aux/: .run-format.zsh
cmake/: Coverage.cmake  EnsureUniversalFreeType.cmake  FetchCURL.cmake
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake
cmake/linux/: buildspec.cmake  defaults.cmake
cmake/macos/: buildspec.cmake
cmake/windows/: buildspec.cmake  compilerconfig.cmake  configure-installer.cmake  defaults.cmake  helpers.cmake  installer.cmake  installer.nsi.in  sign-file.cmake  signing.cmake
data/effects/: greyscale.effect
scripts/: build-universal-freetype.sh  run-tests.sh
src/: main.c  plugin-browser.c  plugin-browser.h  plugin-image-source.c  plugin-image-source.h  plugin-oauth-util.c  plugin-properties.c  plugin-text-source.c  plugin-text-source.h  plugin-xbox-auth.c  plugin-xbox-auth.h
src/common/: achievement.c  achievement.h  achievement_progress.c  achievement_progress.h  device.c  device.h  game.c  game.h  gamerscore.c  gamerscore.h  identity.c  identity.h  memory.h  token.c  token.h  types.c  types.h  unlocked_achievement.c  unlocked_achievement.h  xbox_identity.c  xbox_identity.h  xbox_session.c  xbox_session.h
src/configuration/: properties.c  properties.h
src/crypto/: crypto.c  crypto.h
src/diagnostics/: log.c.in  log.h
src/drawing/: color.c  color.h  image.c  image.h  text.c  text.h
src/encoding/: base64.c  base64.h
src/integrations/: monitoring_service.c  monitoring_service.h
src/integrations/retro-achievements/: retro_achievements_monitor.c  retro_achievements_monitor.h
src/integrations/xbox/: account_manager.c  xbox_client.c  xbox_client.h  xbox_monitor.c  xbox_monitor.h  xbox_session.c  xbox_session.h
src/integrations/xbox/contracts/: xbox_achievement.c  xbox_achievement.h  xbox_achievement_progress.c  xbox_achievement_progress.h  xbox_unlocked_achievement.c  xbox_unlocked_achievement.h
src/integrations/xbox/entities/: xbox_identity.c  xbox_identity.h  xbox_session.c  xbox_session.h
src/integrations/xbox/oauth/: util.c  xbox-live.c
src/io/: cache.c  cache.h  state.c  state.h
src/net/browser/: browser.c  browser.h
src/net/http/: http.c  http.h
src/net/json/: json.c  json.h
src/oauth/: callback-server.c  callback-server.h  google.c  google.h  play-lab.c  play-lab.h  util.c  util.h  xbox-live.c  xbox-live.h
src/retro-achievements/: retro_achievements_monitor.c  retro_achievements_monitor.h
src/sources/: achievement_description.c  achievement_description.h  achievement_icon.c  achievement_icon.h  achievement_name.c  achievement_name.h  achievements-tracker-source.c  achievements-tracker-source.h  achievements_count.c  achievements_count.h  game_cover.c  game_cover.h  gamerpic.c  gamerpic.h  gamerscore.c  gamerscore.h  gamertag.c  gamertag.h  xbox_achievements_text_source.c
src/sources/common/: achievement_cycle.c  achievement_cycle.h  image_source.c  image_source.h  text_source.c  text_source.h  visibility_cycle.c  visibility_cycle.h
src/sources/google/: account.c  account.h
src/sources/play-lab/: account.c  account.h
src/sources/playlab/: account.c  account.h
src/sources/steam/: account.c  account.h
src/sources/xbox/: account.c  achievement_description.c  achievement_description.h  achievement_icon.c  achievement_icon.h  achievement_name.c  achievement_name.h  achievements_count.c  achievements_count.h  achievements_text_source.c  achievements_total_count.c  achievements_total_count.h  achievements_unlocked_count.c  achievements_unlocked_count.h  avatar.c  avatar.h  game_cover.c  game_cover.h  game_cover_source.c  game_cover_source.h  gamerpic.c  gamerpic.h  gamerscore.c  gamerscore.h  gamertag.c  gamertag.h
src/system/: font.c  font.h
src/text/: base64.c  convert.c  convert.h  parsers.c  parsers.h
src/time/: time.c  time.h
src/ui/: achievement_tracker_config.cpp  achievement_tracker_config.h  xbox_account_config.cpp  xbox_account_config.h
src/util/: thread_compat.h  uuid.c  uuid.h
src/xbox/: account_manager.c  account_manager.h  client.c  xbox_client.c  xbox_client.h  xbox_monitor.c  xbox_monitor.h  xbox_monitoring.c  xbox_monitoring.h  xbox_session.c  xbox_session.h
test/: test_convert.c  test_crypto.c  test_encoder.c  test_monitoring_service.c  test_parsers.c  test_types.c  test_xbox_session.c  unity_config.h
test/stubs/: bmem_stub.c  obs-module.h
test/stubs/integrations/: retro_achievements_monitor_stub.c  retro_achievements_monitor_stub.h  xbox_monitor_stub.c  xbox_monitor_stub.h
test/stubs/io/: cache_stub.c
test/stubs/time/: time_stub.c  time_stub.h
test/stubs/util/: bmem.h
test/stubs/xbox/: xbox_client.h  xbox_client_stub.c
tests/: test_encoder.c
tests/stubs/: bmem_stub.c
tests/stubs/util/: bmem.h
